--- a/txt/99-appendix.tex
+++ b/txt/99-appendix.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\chapter{Illustration of alogrithms}
+\chapter{Illustration of algorithms}
 
 This appendix illustrates the applied encryption and decryption algorithms.
 For details about their functionality have a look to \cref{chap:design}.
@@ -36,7 +36,7 @@ This appendix contains screenshots of the implemented features in the \emph{Clot
     \caption[Clotilde UI: Overview]{
         The updated overview page of the Clotilde UI. 
         All logs are visualized as before. 
-        The user can share or revoke access the users having access to a log by clicking on the corresponding button in the table.}
+        The user can share or revoke access to a log by clicking on the corresponding button in the table.}
     \label{app:clotilde-overview}
 \end{figure}
 \newpage
@@ -45,10 +45,10 @@ This appendix contains screenshots of the implemented features in the \emph{Clot
     \centering
     \caption[Clotilde UI: Share and revoke access]{
         This view allows the user to share or revoke access to a log. 
-        On the left-hand side the details of the log are displayed. 
-        On the right-hand side the user can search for other users in the system. 
-        If a user is found it can be added to the set of recipients. 
-        Moreover, the access to certain users can be revoked by removing them from the list of recipients.}
+        On the left-hand side, the details of the log are displayed. 
+        On the right-hand side, the user can search for other users in the system. 
+        If a user is found, it can be added to the set of recipients. 
+        The access to certain users can be revoked by removing them from the list of recipients.}
     \label{app:clotilde-share}
 \end{figure}
 
@@ -56,7 +56,7 @@ This appendix contains screenshots of the implemented features in the \emph{Clot
     \fbox{\includegraphics[scale=0.35]{../img/06/clotilde_shared.png}}
     \centering
     \caption[Clotilde Ui: Shared logs]{
-        This view lists all logs which were shared with the logged-in users.
+        This view lists all logs that are shared with the logged-in users.
         It is realized as additional section within the menu.
     }
     \label{app:clotilde-shared}
