--- a/txt/5-protocol-design.tex
+++ b/txt/5-protocol-design.tex
@@ -184,7 +184,7 @@ Since JWS and JWE tokens can also be nested into each other, JOSE can be used to
     The \emph{shared log} is finally encrypted to obtain a JWE token.
     This token also contains the unencrypted metadata within its protected header.
     The metadata, however, is still integrity protected.
-\end{enumerate}
+\end{itemize}
 
 
 \begin{figure}[h!]
